# Coerce-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md
coerce/: Cargo.toml  README.md  build.rs  proto-build.rs
coerce-remote/: Cargo.toml
coerce-remote/codec/: json.rs  mod.rs
coerce-remote/examples/coerce-chat-common/: Cargo.toml
coerce-remote/examples/coerce-chat-common/src/: lib.rs
coerce-remote/examples/coerce-chat-gateway/: Cargo.toml
coerce-remote/examples/coerce-chat-worker/: Cargo.toml
coerce-remote/examples/coerce-chat-worker/src/: main.rs
coerce-remote/macros/: Cargo.toml
coerce-remote/macros/src/: lib.rs
coerce-remote/providers/coerce-cluster-mysql/: Cargo.toml
coerce-remote/providers/coerce-cluster-mysql/src/: lib.rs
coerce-remote/providers/coerce-mysql/: Cargo.toml
coerce-remote/providers/coerce-mysql/src/: lib.rs
coerce-remote/providers/coerce-redis/: Cargo.toml
coerce-remote/providers/coerce-redis/src/: lib.rs  workers.rs
coerce-remote/providers/coerce-redis/tests/: test_redis_actor_store.rs  test_redis_worker_store.rs
coerce-remote/src/: actor.rs  actor_ref.rs  context.rs  handler.rs  lib.rs  mod.rs  node.rs
coerce-remote/src/actor/: ext.rs  handler.rs  heartbeat.rs  message.rs  mod.rs
coerce-remote/src/cluster/: manager.rs  mod.rs  node.rs  workers.rs
coerce-remote/src/cluster/builder/: client.rs  mod.rs  worker.rs
coerce-remote/src/cluster/client/: mod.rs
coerce-remote/src/cluster/discovery/: dns.rs  mod.rs
coerce-remote/src/codec/: json.rs  mod.rs
coerce-remote/src/context/: builder.rs  mod.rs
coerce-remote/src/net/: client.rs  codec.rs  message.rs  mod.rs  server.rs
coerce-remote/src/net/server/: mod.rs  session.rs
coerce-remote/src/storage/: activator.rs  mod.rs  state.rs
coerce-remote/src/stream/: mod.rs
coerce-remote/src/transport/: mod.rs  tcp.rs
coerce-remote/tests/: test_remote_actor.rs  test_remote_actor_activator.rs  test_remote_actor_creation.rs  test_remote_actor_heartbeat.rs  test_remote_cluster_builder.rs  test_remote_cluster_client.rs  test_remote_cluster_nodes.rs  test_remote_cluster_seed.rs  test_remote_cluster_workers.rs  test_remote_cluster_workerstore.rs  test_remote_codec.rs  test_remote_handle.rs  test_remote_net.rs  test_remote_node_store.rs  test_remote_server.rs  test_remote_transport_tcp.rs
coerce-remote/tests/util/: mod.rs
coerce-remote/transport/: mod.rs
coerce-rt/: Cargo.toml  README.md
coerce-rt/macros/src/: lib.rs
coerce-rt/src/: lib.rs  main.rs  worker.rs
coerce-rt/src/actor/: context.rs  lifecycle.rs  message.rs  mod.rs  scheduler.rs
coerce-rt/src/actor/remote/: handler.rs  mod.rs
coerce-rt/src/actor/scheduler/: actor.rs  mod.rs  timer.rs
coerce-rt/src/remote/: actor.rs  actor_ref.rs  context.rs  handler.rs  mod.rs
coerce-rt/src/remote/actor/: ext.rs  handler.rs  (+3 more)
coerce-rt/tests/: test_actor.rs  test_context.rs  test_lifecycle.rs  test_message.rs  test_remote.rs  test_remote_actor_creation.rs  test_remote_cluster_builder.rs  test_remote_cluster_client.rs  test_remote_cluster_nodes.rs  test_remote_cluster_seed.rs  test_remote_cluster_workers.rs  test_remote_codec.rs  test_remote_handle.rs  test_remote_net.rs  test_req_res.rs  test_timer.rs  test_worker.rs  util.rs
coerce-rt/tests/util/: mod.rs
coerce/benches/: actor_creation.rs  actor_messaging.rs
coerce/macros/: Cargo.toml
coerce/macros/src/: lib.rs
coerce/src/: lib.rs  worker.rs
coerce/src/actor/: blocking.rs  children.rs  context.rs  lifecycle.rs  message.rs  mod.rs  supervised.rs  system.rs  worker.rs
coerce/src/persistent/: actor.rs  batch.rs  context.rs  failure.rs  mod.rs  persist.rs  recovery.rs
coerce/src/protocol/: network.proto  sharding.proto  singleton.proto
coerce/src/remote/: actor_ref.rs  handler.rs  mod.rs
coerce/src/sharding/: builder.rs  mod.rs
coerce/src/singleton/: factory.rs  mod.rs
coerce/tests/: test_actor_lifecycle.rs  test_actor_messaging.rs  test_actor_supervision.rs  test_actor_system.rs  test_actor_system_blocking.rs  test_actor_watching.rs  test_cluster_singleton.rs  test_context.rs  test_lifecycle.rs  test_message.rs  test_persistent_failures.rs  test_persistent_journal.rs  test_persistent_recovery.rs  test_remote_actor_creation.rs  test_remote_actor_err.rs  test_remote_actor_locate.rs  test_remote_api.rs  test_remote_cluster_builder.rs  test_remote_cluster_client.rs  test_remote_cluster_formation.rs  test_remote_cluster_heartbeat.rs  test_remote_cluster_nodes.rs  test_remote_cluster_seed.rs  test_remote_cluster_workers.rs  test_remote_codec.rs  test_remote_handle.rs  test_remote_net.rs  test_remote_pubsub.rs  test_remote_sharding.rs  test_remote_sharding_rebalancing.rs  test_remote_system_health.rs  test_remote_system_security.rs  test_supervision.rs  test_timer.rs  test_tracing.rs  test_worker.rs
coerce/tests/sharding/: mod.rs
coerce/tests/util/: mod.rs
coerce/tools/coerce-proto-build/: Cargo.toml
coerce/tools/coerce-test/: Cargo.toml
coerce/tools/proto-build/: Cargo.toml
examples/coerce-chat-worker/: Cargo.toml
examples/coerce-chat-worker/src/: main.rs
examples/coerce-cluster-example/: Cargo.toml
examples/coerce-cluster-example/src/: actor.rs  main.rs  worker.rs
examples/coerce-sharded-chat-example/: Cargo.toml  Dockerfile-client  Dockerfile-server  run-client-user-2.ps1  run-server-1.ps1  run-server-2.ps1  run-server-3.ps1  run-server-4.ps1
examples/coerce-sharded-chat-example/scripts/: run-client-user-1.ps1  run-client-user-2.ps1  run-client-user-3.ps1  run-client-user-4.ps1  run-server-1.ps1  run-server-2.ps1  run-server-3.ps1  run-server-4.ps1
examples/coerce-sharded-chat-example/src/: app.rs  lib.rs
examples/coerce-sharded-chat-example/tests/: sharded_chat_tests.rs
modules/replication/coerce-replication/: Cargo.toml
providers/coerce-redis/: Cargo.toml
providers/coerce-redis/src/: lib.rs  workers.rs
providers/coerce-redis/tests/: test_redis_actor_store.rs  test_redis_journal_storage.rs  test_redis_worker_store.rs
providers/discovery/coerce-k8s/: Cargo.toml
providers/persistence/coerce-redis/: Cargo.toml
(+240 files in other folders)
