[workspace]
members = [
    "coerce",
    "coerce/macros",
    "examples/coerce-cluster-example",
    "examples/coerce-sharded-chat-example",
    "coerce/tools/coerce-proto-build",
    "modules/persistence/coerce-redis",
    "modules/discovery/coerce-k8s",
    "modules/replication/coerce-replication"
]

resolver = "2"
