[package]
name = "coerce-remote"
version = "0.1.0"
authors = ["Leon Hartley <leon.hartley@degree53.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
coerce-rt = { path = "../coerce-rt" }

[dev-dependencies]
env_logger = "0.7.1"
chrono = "0.4"