[package]
name = "coerce-remote"
version = "0.2.0-pre"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2018"

[dependencies]
coerce-rt = { path = "../coerce-rt" }
futures = "0.3.1"
tokio = { version = "0.2.13", features = ["full", "tcp"] }
tokio-util = { version = "0.2.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
hashring = "0.1.0"
bytes = "0.5.3"
byteorder = "1.3.2"
chrono = "0.4"
trust-dns-proto = "0.18"
trust-dns-client = "0.18"

[dev-dependencies]
env_logger = "0.7.1"
coerce-macros = { path = "./macros" }