[package]
name = "coerce-rt"
version = "0.1.0"
authors = ["Leon Hartley <leon.hartley@degree53.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1" }
lazy_static = "1.4.0"
