[package]
name = "coerce-rt"
description = "Async actor runtime"
license = "Apache-2.0"
version = "0.1.2-pre"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.7.1"
chrono = "0.4"