[package]
name = "coerce-rt"
description = "Async actor runtime and distributed systems framework"
license = "Apache-2.0"
version = "0.3.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/leonhartley/coerce-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full", "tcp"] }
tokio-util = { version = "0.2.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
futures = "0.3.1"
async-trait = { version = "0.1" }
hashring = "0.1.0"
bytes = "0.5.3"
byteorder = "1.3.2"
chrono = "0.4"
trust-dns-proto = "0.18"
trust-dns-client = "0.18"

[dev-dependencies]
env_logger = "0.7.1"
coerce-macros = { path = "./macros" }
