[package]
name = "coerce"
description = "Async actor runtime and distributed systems framework"
license = "Apache-2.0"
version = "0.8.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/leonhartley/coerce-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-stream = { version = "0.1" }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
futures = "0.3"
async-trait = { version = "0.1" }
hashring = "0.3.0"
bytes = "1.2.1"
byteorder = "1.4"
chrono = "0.4"
protobuf = "3.2.0"
tracing = { version = "0.1", features = ["valuable"] }
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.18.0"
tracing-core = "0.1"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
anyhow = "1.0"
rand = "0.8.5"
parking_lot = "0.12.1"
axum = { version = "0.5", features = ["query"] }
axum-extra = "0.3"
metrics = "0.20.1"
valuable = { version = "0.1", features = ["derive"] }
tracing-subscriber = { features = ["json"], version = "0.3.16" }

## todo: Add back when they release the version with updated tokio
#trust-dns-proto = { version = "0.19", features = ["tokio-runtime"] }
#trust-dns-client = { version = "0.19" }

[dev-dependencies]
env_logger = "0.9"
coerce-macros = { path = "./macros" }
opentelemetry-jaeger = "0.17.0"
criterion = { version = "0.4.0", features = ["async_tokio"] }

[[bench]]
name = "actor_messaging"
harness = false