[package]
name = "coerce"
description = "Async actor runtime and distributed systems framework"
license = "Apache-2.0"
version = "0.8.2"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/leonhartley/coerce-rs"

[features]
default = []

full = [
    "remote",
    "persistence",
    "metrics",
    "sharding",
    "api"
]

remote = [
    "dep:hashring",
    "dep:protobuf",
    "dep:chrono",
    "dep:tokio-stream",
    "dep:parking_lot",
    "dep:bytes",
    "dep:byteorder"
]

persistence = [
    "dep:protobuf",
    "dep:anyhow",
    "dep:parking_lot"
]

metrics = [
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:metrics-util"
]

sharding = [
    "remote",
    "persistence"
]

api = ["remote", "dep:axum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
tracing = { version = "0.1", features = ["valuable"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3"
async-trait = { version = "0.1" }
hashring = { version = "0.3.0", optional = true }
bytes = { version = "1.2.1", optional = true }
byteorder = { version = "1.4", optional = true }
chrono = { version = "0.4", optional = true }
protobuf = { version = "3.2.0", optional = true }
anyhow = { version = "1.0", optional = true }
rand = "0.8.5"
parking_lot = { version = "0.12.1", optional = true }
axum = { version = "0.6.0", features = ["query"], optional = true }
metrics = { version = "0.20.1", optional = true }
valuable = { version = "0.1", features = ["derive"] }
metrics-exporter-prometheus = { version = "0.11", optional = true }
metrics-util = { version = "0.14", optional = true }

## todo: Add back when they release the version with updated tokio
#trust-dns-proto = { version = "0.19", features = ["tokio-runtime"] }
#trust-dns-client = { version = "0.19" }

[dev-dependencies]
coerce-macros = { version = "0.2.0" }
criterion = { version = "0.4.0", features = ["async_tokio"] }
tracing-subscriber = { features = ["json"], version = "0.3.16" }

[[bench]]
name = "actor_messaging"
harness = false

[package.metadata.docs.rs]
all-features = true