[package]
name = "coerce-macros"
version = "0.1.0"
authors = ["Leon Hartley <leon.hartley@sharpgaming.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

