[package]
name = "coerce-macros"
version = "0.1.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2018"
description = "Utility macros for Coerce"
license = "Apache-2.0"
repository = "https://github.com/leonhartley/coerce-rs"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

