[package]
name = "coerce-cluster-example"
version = "0.1.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { path = "../../coerce" }
coerce-macros = { path = "../../coerce/macros" }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = "0.2"
opentelemetry-jaeger = "0.10"
tracing-opentelemetry = "0.10.0"
opentelemetry = { version = "0.11", default-features = false, features = ["trace"] }

[[bin]]
name = "worker"
path = "src/worker.rs"