[package]
name = "coerce-sharded-chat-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { path = "../../coerce" }
coerce-macros = { path = "../../coerce/macros" }
coerce-redis = { path = "../../providers/persistence/coerce-redis" }

tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
async-trait = { version = "0.1" }
tungstenite = "0.16"
tokio-tungstenite = { version = "0.16", features = ["stream", "connect"] }
futures = { version = "0.3"}
futures-io = { version = "0.3"}
futures-util = { version = "0.3" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4" }
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = { version = "3.1.6", features = ["env"]}
metrics-util= "0.12.0"
metrics-exporter-prometheus = "0.9.0"
env_logger = "0.9"

#jemallocator = { version = "0.3.0", features = ["profiling", "debug"] }
#console-subscriber = "0.1.6"

[[bin]]
name = "sharded-chat-server"
path = "bin/server.rs"

[[bin]]
name = "sharded-chat-client"
path = "bin/client.rs"