[package]
name = "coerce-sharded-chat-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { path = "../../coerce", features = ["full"] }
coerce-macros = { version = "0.2.0" }
coerce-redis = { path = "../../providers/persistence/coerce-redis" }
coerce-k8s = { version = "0.1.7" }

tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
async-trait = { version = "0.1" }
tungstenite = "0.17.3"
tokio-tungstenite = { version = "0.17.2", features = ["stream", "connect"] }
futures = { version = "0.3"}
futures-io = { version = "0.3"}
futures-util = { version = "0.3" }
tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4" }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
clap = { version = "4.0", features = ["env", "derive"]}
metrics-util= "0.14.0"
metrics-exporter-prometheus = "0.11.0"
env_logger = "0.9"
protobuf = "3.2.0"
metrics-process = "1.0.10"

#jemallocator = { version = "0.3.0", features = ["profiling", "debug"] }
#console-subscriber = "0.1.6"

[[bin]]
name = "sharded-chat-server"
path = "bin/server.rs"

[[bin]]
name = "sharded-chat-client"
path = "bin/client.rs"