[package]
name = "coerce-redis"
version = "0.1.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { path = "../../coerce" }
async-trait = { version = "0.1" }
redis-async = { version = "0.8", features = ["tokio10"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6", features = ["full"] }