[package]
name = "coerce-chat-worker"
version = "0.1.0"
authors = ["Leon Hartley <leon.hartley@degree53.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce-rt = { path = "../../../coerce-rt" }
coerce-remote = { path = "../../../coerce-remote" }
futures = "0.3.1"
tokio = { version = "0.2.6", features = ["full", "tcp"] }
tokio-util = { version = "0.2.0", features = ["full"] }
