[package]
name = "coerce-redis"
version = "0.1.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce-remote = { path = "../../" }
coerce-rt = { path = "../../../coerce-rt" }
async-trait = { version = "0.1" }
redis-async = "0.6.1"
