[package]
name = "coerce-k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { path = "../../../coerce", features = ["remote"] }
kube = { version = "0.74", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.15", features = ["v1_24", "api"] }
tracing = { version = "0.1" }