[package]
name = "coerce-k8s"
version = "0.1.3"
edition = "2021"
description = "Kubernetes discovery provider, automatically discover cluster peers hosted in Kubernetes, based on a configurable pod-selection label"
license = "Apache-2.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
repository = "https://github.com/leonhartley/coerce-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { version = "0.8.3", features = ["remote"] }
kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.17.0", features = ["v1_24", "api"] }
tracing = { version = "0.1" }