[package]
name = "coerce-redis"
version = "0.3.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2021"
description = "Redis actor persistence provider for Coerce. Supports event sourcing and snapshots"
license = "Apache-2.0"
repository = "https://github.com/leonhartley/coerce-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cluster = [
    "redis/cluster"
]

[dependencies]
coerce = { path = "../../../coerce", features = ["persistence"] }
async-trait = { version = "0.1" }
redis = { version = "0.22.1", features = ["tokio-comp"] }
tokio = { version = "1.21.1", features = ["full"] }
anyhow = "1"
bytes = { version = "1.2.1" }