[package]
name = "coerce-redis"
version = "0.5.0"
authors = ["Leon Hartley <ljph@outlook.com>"]
edition = "2021"
description = "Redis actor persistence provider for Coerce. Supports event sourcing and snapshots"
license = "Apache-2.0"
repository = "https://github.com/leonhartley/coerce-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cluster = [
    "redis/cluster",
    "redis/cluster-async",
]

[dependencies]
coerce = { path = "../../../coerce", features = ["persistence"] }
async-trait = { version = "0.1.74" }
redis = { version = "0.23.3", features = ["tokio-comp"] }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1"
bytes = { version = "1.5.0" }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { features = ["fmt"], version = "0.3.18" }